@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-22T08:18:47Z",
+  "timestamp" : "2022-05-22T16:21:13Z",
   "count_outdated" : 235,
   "uniques_outdated" : 156,
-  "count" : 288,
-  "uniques" : 187,
+  "count" : 286,
+  "uniques" : 186,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 7 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 4 ]
+      "count": 1,
+      "count_minmax": [ 1, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 4 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
