@@ -1,11 +1,11 @@
 {
-  "count": 53,
+  "count": 51,
   "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
